force-app/main/default/objects/Vacancy_Skill__c/Vacancy_Skill__c.object-meta.xml
<CustomObject>
    <label>Vacancy Skill</label>
    <nameField>
        <displayFormat>VS-{0000}</displayFormat>
        <label>Vacancy Skill ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vacancy Skills</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>