force-app/main/default/objects/Vacancy_Skill__c/fields/Skill_Level__c.field-meta.xml
<CustomField>
    <fullName>Skill_Level__c</fullName>
    <label>Skill Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Intern</fullName>
            </value>
            <value>
                <fullName>Graduate</fullName>
            </value>
            <value>
                <fullName>Intermediate</fullName>
            </value>
            <value>
                <fullName>Expert</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>