force-app/main/default/objects/Vacancy_Skill__c/fields/Vacancy__c.field-meta.xml
<CustomField>
    <fullName>Vacancy__c</fullName>
    <label>Vacancy</label>
    <referenceTo>Vacancy__c</referenceTo>
    <relationshipLabel>Vacancy Skills</relationshipLabel>
    <relationshipName>Vacancy_Skills</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>